.argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slidesync
  namespace: slidesync
spec:
  selector:
    matchLabels:
      app: slidesync
  replicas: 2
  template:
    metadata:
      labels:
        app: slidesync
    spec:
      containers:
      - name: slidesync
        image: yumekiti/slidesync:88e7513
        ports:
        - containerPort: 80
