.argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slidesync
  namespace: slidesync
spec:
  selector:
    app: slidesync
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
