.argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slidesync
  namespace: slidesync
spec:
  ingressClassName: nginx
  rules:
  - host: slidesync.yumekiti.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slidesync
            port:
              number: 80
